# digital_rubiks_cube

./: .gitignore  Makefile  ReadMe.md  ReadMe.txt  SolveCubeSteps.md  __init__.py  generate_permutations_list.py  pyproject.toml  run_average_time.py  run_me.py  test_cube_moves.py
modules/: cube.py  run_something.py
modules/solve_steps/: step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  step_8.py  step_x_template
test_cases/: middle_vertical_down_1.json  right_vertical_down_1.json  right_vertical_up_1.json  top_horizontal_right_1.json
tests/: test__cube.py  test_cube_moves.py
tests/test_cases/: custom__move_cube__bottom_horizontal_left_4.json  custom__move_cube__left_vertical_down_1.json  custom__move_cube__left_vertical_down_3.json  custom__move_cube__left_vertical_up_1.json  custom__move_cube__middle_horizontal_left_1.json  custom__move_cube__middle_horizontal_left_3.json  custom__move_cube__middle_horizontal_left_4.json  custom__move_cube__middle_horizontal_right_1.json  custom__move_cube__middle_horizontal_right_2.json  custom__move_cube__middle_horizontal_right_4.json  custom__move_cube__middle_vertical_down_1.json  custom__move_cube__middle_vertical_up_1.json  custom__move_cube__middle_vertical_up_2.json  custom__move_cube__middle_vertical_up_4.json  custom__move_cube__right_vertical_down_1.json  custom__move_cube__right_vertical_down_2.json  custom__move_cube__right_vertical_down_4.json  custom__move_cube__right_vertical_up_1.json  custom__move_cube__right_vertical_up_3.json  custom__move_cube__simple_solve_2.json  (+66 more)
(+447 files in other folders)
